# ResumeAI

./: .coverage  .dockerignore  .env  .env.backend.example  .env.docker.example  .env.example  .env.frontend.example  .env.local.example  .eslintignore  .eslintrc.json  .flake8  .gitignore  .jscpd.json  .openhandsignore  .prettierignore  .test-performance.json  .vercelignore  .vitest-results.json  ACCESSIBILITY.md  ACCESSIBILITY_TESTING.md  ACCESSIBILITY_TESTING_GUIDE.md  ACCESSIBLE_DIALOG_ARCHITECTURE.md  ACCESSIBLE_DIALOG_IMPLEMENTATION.md  ADVANCED_FEATURES.md  AGENTS.md  API_DOCUMENTATION.md  API_INTEGRATION_TESTS.md  API_KEYS.md  ARCHITECTURE.md  ASYNC_PDF_RENDERING_GUIDE.md  App.tsx  BACKEND_ERROR_CODES.md  BRANCH_PROTECTION.md  BUNDLE_ANALYSIS.md  CAPACITY_PLANNING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_CHECKLIST.md  CONTRIBUTING.md  (+220 more)
resume-api/: .dockerignore  .env.example  .env.test  .gitignore  .pip-audit.conf  API_ERROR_CODES.md  API_KEY_SECURITY.md  API_SCHEMA_DOCS.md  BLUE_GREEN_DEPLOYMENT.md  CAPACITY_PLANNING_GUIDE.md  CIRCUIT_BREAKER.md  CLOUDRUN_DEPLOYMENT.md  DATABASE_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SAFEGUARDS.md  DEPLOYMENT_VERIFICATION.md  DISTRIBUTED_TRACING.md  DOCKER_HEALTH_CHECK_FIX.md  Dockerfile  ERROR_CODES.md  ERROR_RESPONSE_EXAMPLES.md  ERROR_STANDARDIZATION_SUMMARY.md  GRAFANA_DASHBOARDS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INPUT_VALIDATION_IMPLEMENTATION.md  INTEGRATION_TESTS_QUICK_START.md  ISSUE_391_VERIFICATION.md  ISSUE_395_CIRCUIT_BREAKER.md  LOAD_TESTING_README.md  LOAD_TEST_BASELINE_METRICS.md  MONITORING.md  OAUTH_MONITORING_INTEGRATION.md  OAUTH_TESTING.md  PRIVACY_COMPLIANCE.md  README.md  ROLLBACK_PROCEDURE.md  TEMPLATE_GUIDE.md  VALIDATION_ENDPOINT_CHANGES.md  __init__.py  database.py  (+29 more)
resume-api/alembic/: env.py
resume-api/api/: __init__.py  advanced_routes.py  analytics_routes.py  api_key_routes.py  async_pdf_routes.py  models.py  (+14 more)
resume_ai_lib/: README.md  pyproject.toml
(+1110 files in other folders)
