[tool.radon]
complexity = ["--min-complexity", "10"]

[tool.poetry]
name = "resume-api"
version = "0.1.0"
description = "ResumeAI Backend API"
authors = ["ResumeAI Team"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
