[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-ai-lib"
version = "1.0.0"
description = "Shared library for AI-powered resume tailoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ResumeAI Team", email = "team@resumeai.dev"}
]
keywords = ["resume", "ai", "tailoring", "claude", "openai", "job"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
ai = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/anchapin/ResumeAI"
Repository = "https://github.com/anchapin/ResumeAI"
Issues = "https://github.com/anchapin/ResumeAI/issues"

[project.entry_points]
"resume-ai-lib" = "resume_ai_lib:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
